criei botoes na lateral

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <main>
-        <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        <section id="telefone"><!--O "name" que foi designado com valor 'tela' serva para darmos o 'target' nos links depois-->
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isso.</iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br><!--configuração para deixar os ícones um em cima do outrio e não lado a lado-->
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
         </section>
     </main>
 </body>
